Debugged button form

--- a/feedback-widget.html
+++ b/feedback-widget.html
@@ -19,13 +19,12 @@
     </button>
     <form> 
         <h3>Help us improve Beta!</h3>
-        <p style="font-size:14px">How can we improve?</p>
+        <p style="font-size:14px"><strong>How can we improve?</strong></p>
         <textarea type="text" rows='4' value={this.state.value} onChange={this.handleChange}/></textarea>
-        <p style="font-size:14px">General Feedback?</p>
+        <p style="font-size:14px"><strong>General Feedback?</strong></p>
         <textarea type="text" rows='4' value={this.state.value} onChange={this.handleChange}/></textarea>
         <br>
-        <br>
-<!--        <p style="font-size: 13px">This information will be reported on GitHub where it will be publicly visible. You can review all reported feedback on our GitHub page.</p>-->
+        <p style="font-size: 13px">This information will be reported on GitHub where it will be publicly visible. You can review all reported feedback on our GitHub page.</p>
         <button class="btn-default">Submit</button>
     </form>
     <script src="widget.js"></script>
