--- a/feedback-widget.html
+++ b/feedback-widget.html
@@ -20,12 +20,12 @@
     <form> 
         <h3>Help us improve Beta!</h3>
         <p style="font-size:14px"><strong>How can we improve?</strong></p>
-        <textarea type="text" rows='4' value={this.state.value} onChange={this.handleChange}/></textarea>
+        <textarea id="improve" type="text" rows='4' value={this.state.value} onChange={this.handleChange}/></textarea>
         <p style="font-size:14px"><strong>General Feedback?</strong></p>
-        <textarea type="text" rows='4' value={this.state.value} onChange={this.handleChange}/></textarea>
+        <textarea id="feedback" type="text" rows='4' value={this.state.value} onChange={this.handleChange}/></textarea>
         <br>
         <p style="font-size: 13px">This information will be reported on GitHub where it will be publicly visible. You can review all reported feedback on our GitHub page.</p>
-        <button class="btn-default">Submit</button>
+        <button id="feedback-submit-btn" class="btn-default">Submit</button>
     </form>
     <script src="widget.js"></script>
 </body>
