--- a/feedback-widget.html
+++ b/feedback-widget.html
@@ -21,9 +21,9 @@
 <!--        <h3>Help us improve Beta!</h3>-->
         <div class="reaction-bar">
             <p style="display: inline-block; font-size: 14px;"><strong>Rating: </strong></p>
-            <i class="fa fa-smile-o"></i>
-            <i class="fa fa-meh-o"></i>
-            <i class="fa fa-frown-o"></i>
+            <i id="reaction-happy" class="fa fa-smile-o"></i>
+            <i id="reaction-meh" class="fa fa-meh-o"></i>
+            <i id="reaction-frown" class="fa fa-frown-o"></i>
         </div>
         <p style="font-size:14px"><strong>How can we improve?</strong></p>
 
