--- a/feedback-widget.html
+++ b/feedback-widget.html
@@ -13,17 +13,19 @@
     <button id="feedback-widget">
         <div class="item"> 
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i> 
-            <p id="provide_feedback">Provide Feedback</p>
+            <p id="provide_feedback">
+                Provide Feedback
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </p>
         </div>
     </button>
     <form> 
         <br><br>
-<!--        <h3>Help us improve Beta!</h3>-->
         <div class="reaction-bar">
             <p style="display: inline-block; font-size: 14px;"><strong>Rating: </strong></p>
-            <i class="fa fa-smile-o"></i>
-            <i class="fa fa-meh-o"></i>
-            <i class="fa fa-frown-o"></i>
+            <i class="fa fa-reaction fa-smile-o"></i>
+            <i class="fa fa-reaction fa-meh-o"></i>
+            <i class="fa fa-reaction fa-frown-o"></i>
         </div>
         <p style="font-size:14px"><strong>How can we improve?</strong></p>
 
