Refactor widget js and fix animation glitch.

--- a/feedback-widget.html
+++ b/feedback-widget.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <div class="feedback-module">
-    <button id="feedback-widget">
+    <button class="circle-button" id="feedback-widget">
       <div class="item">
         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
         <p id="provide_feedback">
           Provide Feedback
-          <i class="fa fa-times" aria-hidden="true"></i>
+          <i id="feedback-close" class="fa fa-times" aria-hidden="true"></i>
         </p>
       </div>
     </button>
