Feedback analytics updated, added Matt's wordcloud to the html, and created persistant font accross sites

--- a/feedback-widget.html
+++ b/feedback-widget.html
@@ -28,7 +28,7 @@
       </div>
 
       <p>General Feedback?</p>
-      <textarea id="feedback" type="text" rows='3' value={this.state.value} onChange={this.handleChange}/></textarea>
+      <textarea id="feedback" type="text" rows='3' value={this.state.value} onChange={this.handleChange}></textarea>
       <p class="small">This information will be reported on GitHub where it will be publicly visible. You can review all reported feedback on our GitHub page.</p>
       <button id="feedback-submit-btn" class="btn-default">Submit</button>
     </form>
