--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
+    <link href="public/css/demo.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link href="public/css/analytics_style.css" rel="stylesheet">
     <link href="public/css/custom.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="public/css/animate.css" />
+    <link rel="stylesheet" type="text/css" href="public/css/demo.css" />
     <script src="public/js/viewportchecker.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function () {
@@ -26,11 +29,11 @@
 </head>
 
 <body>
-    <!-- puts our first set of divs (nav + revolvify) inside of a scrollable container --> 
+    <!-- puts our first set of divs (nav + revolvify) inside of a scrollable container -->
     <div style="height: 800px; position: relative">
         <div class=" w3-center w3-grey w3-padding-128" style="overflow-y:scroll; max-height:100%;">
             <!-- Navbar -->
-            <ul class="w3-navbar w3-card-2 w3-left w3-left-align w3-top w3-large" style="background-color: #36BFAF">
+            <ul class="w3-navbar w3-card-2 w3-left w3-left-align w3-top w3-large" style="background-color: #267b82">
                 <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
                     <a class="w3-padding-large w3-hover-white w3-large" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
                 </li>
