--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -35,8 +35,9 @@
 <body>
     <!-- puts our first set of divs (nav + revolvify) inside of a scrollable container -->
     <div style="height: 800px; position: relative">
-        <div class=" w3-center w3-grey w3-padding-128" style="overflow-y:scroll; max-height:100%;">
+        <div class=" w3-center w3-padding-128 w3-background" style="overflow-y:scroll; max-height:100%;">
             <!-- Navbar -->
+            <img class="background-img" src="public/img/yosemite.jpg">
             <ul class="w3-navbar w3-card-2 w3-left w3-left-align w3-top w3-large" style="background-color: #267b82">
                 <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
                     <a class="w3-padding-large w3-hover-white w3-large" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
@@ -54,10 +55,10 @@
             </div>
 
 
-            <div class="w3-content w3-center w3-white w3-padding-250 w3-round-xlarge">
+            <div class="w3-content w3-center w3-padding-250 w3-round-xlarge" style="position: absolute;z-index:50;">
                 <br/>
                 <h1 class="w3-margin w3-jumbo">REVOLVify</h1>
-                <img class="w3-center" src="public/img/graph_logo.png" style="width:200px;height:170px;">
+                <img class="w3-center" src="public/img/graph_logo.png" style="width:200px;height:170px">
                 <br/>
                 <br/>
             </div>
@@ -83,50 +84,51 @@
     <div class="w3-row-padding w3-padding-64 w3-container post" id="grid-1">
         <div class="w3-content">
             <h1>Summary</h1>
-                <table class="table table-bordered" id="emoji-table">
-                    <tbody>
-                        <tr>
-                            <td>
-                                <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
-                                <p>Total: </p>
-                            </td>
-                            <td>
-                                <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
-                                <p>Total: </p>
-                            </td>
-                            <td>
-                                <i id="reaction-meh" class="fa fa-reaction fa-frown-o"></i>
-                                <p>Total: </p>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table class="table table-bordered" id="best-worst-page-table">
-                    <thead>
-                        <tr>
-                            <th>Best Pages</th>
-                            <th>Worst Pages</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td id="best-col">
-                                <div class="page-name">index.html</div>
-                                <div class="page-emo-count">
-                                    <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i>
-                                </div>
-                            </td>
-                            <td id="worst-col">
-                                <div class="page-name">yosemite.html</div>
-                                <div class="page-emo-count">
-                                    <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i>
-                                    
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-           
+            <table class="table table-bordered" id="emoji-table">
+                <tbody>
+                    <tr>
+                        <td>
+                            <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
+                            <p>Total: </p>
+                        </td>
+                        <td>
+                            <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
+                            <p>Total: </p>
+                        </td>
+                        <td>
+                            <i id="reaction-meh" class="fa fa-reaction fa-frown-o"></i>
+                            <p>Total: </p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <br>
+            <table class="table table-bordered" id="best-worst-page-table">
+                <thead>
+                    <tr>
+                        <th>Best Pages</th>
+                        <th>Worst Pages</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td id="best-col">
+                            <div class="page-name">index.html</div>
+                            <div class="page-emo-count">
+                                <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i>
+                            </div>
+                        </td>
+                        <td id="worst-col">
+                            <div class="page-name">yosemite.html</div>
+                            <div class="page-emo-count">
+                                <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i>
+
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 
