--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -89,19 +89,19 @@
                         <td>
                             <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
                             <p>Total: 
-                                <span id="reaction-total">15</span>
+                                <span id="reaction-total-1">15</span>
                             </p>
                         </td>
                         <td>
                             <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
                             <p>Total: 
-                                <span id="reaction-total">15</span>
+                                <span id="reaction-total-2">15</span>
                             </p>
                         </td>
                         <td>
                             <i id="reaction-meh" class="fa fa-reaction fa-frown-o"></i>
                             <p>Total: 
-                                <span id="reaction-total">15</span>
+                                <span id="reaction-total-3">15</span>
                             </p>
                         </td>
                     </tr>
