added most viewed and visited

--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -89,19 +89,19 @@
                         <td>
                             <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
                             <p>Total: 
-                                <span id="reaction-total-1">15</span>
+                                <span id="reaction-total-1"></span>
                             </p>
                         </td>
                         <td>
                             <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
                             <p>Total: 
-                                <span id="reaction-total-2">15</span>
+                                <span id="reaction-total-2"></span>
                             </p>
                         </td>
                         <td>
                             <i id="reaction-meh" class="fa fa-reaction fa-frown-o"></i>
                             <p>Total: 
-                                <span id="reaction-total-3">15</span>
+                                <span id="reaction-total-3"></span>
                             </p>
                         </td>
                     </tr>
@@ -110,27 +110,38 @@
             <br>
             <br>
             <table class="table table-bordered" id="best-worst-page-table">
-                <thead>
-                    <tr>
-                        <th>Best Pages</th>
-                        <th>Worst Pages</th>
-                    </tr>
-                </thead>
                 <tbody>
                     <tr>
-                        <td id="best-col">
+                        <th>Best Pages</th>
+                        <td>
                             <div class="page-name">index.html</div>
+                        </td>
+                        <td>
                             <div class="page-emo-count">
                                 <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i>
                             </div>
                         </td>
-                        <td id="worst-col">
+                    </tr>
+                    <tr>
+                        <th>Worst Pages</th>
+                        <td>
                             <div class="page-name">yosemite.html</div>
+                        </td>
+                        <td>
                             <div class="page-emo-count">
                                 <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i>
-
                             </div>
                         </td>
+                    </tr>
+                    <tr>
+                        <th>Most Rated</th>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th>Most Visited</th>
+                        <td></td>
+                        <td></td>
                     </tr>
                 </tbody>
             </table>
@@ -140,15 +151,7 @@
     <!-- Second Grid -->
     <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container" id="grid-2">
         <div class="w3-content">
-            <div class="w3-third w3-center" id="bar-chart">
-                <i class="fa fa-cloud w3-padding-64 w3-margin-right" style="color: #36BFAF"></i>
-            </div>
-
-            <div class="w3-twothird">
-                <h1>Word Cloud</h1>
-                <p class="w3-text-grey w">“Design is the fundamental soul of a human-made creation that ends up expressing itself in successive outer layers of the product or service.”</p>
-                <h6>— by Steve Jobs.</h6>
-            </div>
+            
         </div>
     </div>
 
