--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -57,8 +57,8 @@
 
             <div class="w3-content w3-center w3-padding-250 w3-round-xlarge header-logo">
                 <br/>
-                <h1 class="w3-margin w3-jumbo" style="color: white;">REVOLVify</h1>
-<!--                <img class="w3-center" src="public/img/graph_logo.png" style="width:200px;height:170px">-->
+                <h1 class="w3-margin w3-jumbo" style="color: white;">INSPECTifi</h1>
+                <img class="w3-center" src="public/img/inspectify_logo_white.png" style="width:200px;height:170px">
                 <br/>
             </div>
             <br/>
