--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -58,7 +58,7 @@
             <div class="w3-content w3-center w3-padding-250 w3-round-xlarge header-logo">
                 <br/>
                 <h1 class="w3-margin w3-jumbo" style="color: white;">INSPECTifi</h1>
-                <img class="w3-center" src="public/img/inspectify_logo_white.png" style="width:200px;height:170px">
+                <img class="w3-center" src="public/img/inspectify_logo_white.png" style="height:170px">
                 <br/>
             </div>
             <br/>
@@ -82,23 +82,23 @@
     <!-- First Grid -->
     <div class="w3-row-padding w3-padding-64 w3-container post" id="grid-1">
         <div class="w3-content">
-            <h1>Summary</h1>
-            <table class="table table-bordered" id="emoji-table">
+            <h1 class="headline">Summary</h1>
+            <table class="table" id="emoji-table">
                 <tbody>
                     <tr>
-                        <td>
+                        <td style="background-color: #FADDA7">
                             <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
                             <p>Total: 
                                 <span id="reaction-total-1"></span>
                             </p>
                         </td>
-                        <td>
+                        <td style="background-color: #F2CF8C">
                             <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
                             <p>Total: 
                                 <span id="reaction-total-2"></span>
                             </p>
                         </td>
-                        <td>
+                        <td style="background-color: #E6BD71">
                             <i id="reaction-meh" class="fa fa-reaction fa-frown-o"></i>
                             <p>Total: 
                                 <span id="reaction-total-3"></span>
@@ -135,13 +135,13 @@
                     </tr>
                     <tr>
                         <th>Most Rated</th>
-                        <td></td>
-                        <td></td>
+                        <td><div></div></td>
+                        <td><div></div></td>
                     </tr>
                     <tr>
                         <th>Most Visited</th>
-                        <td></td>
-                        <td></td>
+                        <td><div></div></td>
+                        <td><div></div></td>
                     </tr>
                 </tbody>
             </table>
