--- a/analytics_dashboard_feedback.html
+++ b/analytics_dashboard_feedback.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="public/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="public/css/demo.css" />
+    <script src="public/js/sentiment_analysis.js"></script>
     <!-- D3 Web CDN -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <!-- jQuery Web CDN -->
@@ -180,8 +181,7 @@
         }
     </script>
 
-    <script src="public/js/sentiment_analysis.js">
-    </script>
+
 
 </body>
 
