--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -37,7 +37,7 @@
     <div style="height: 800px; position: relative">
         <div class=" w3-center w3-padding-128 w3-background" style="overflow-y:scroll; max-height:100%;">
             <!-- Navbar -->
-            <img class="background-img" src="public/img/yosemite.jpg">
+            <div class="image-container"></div><img class="background-img" src="public/img/yosemite.jpg">
             <ul class="w3-navbar w3-card-2 w3-left w3-left-align w3-top w3-large" style="background-color: #267b82">
                 <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
                     <a class="w3-padding-large w3-hover-white w3-large" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
@@ -86,19 +86,19 @@
             <table class="table" id="emoji-table">
                 <tbody>
                     <tr>
-                        <td style="background-color: #FADDA7">
+                        <td style="background-color: #E6EFF0">
                             <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
                             <p>Total: 
                                 <span id="reaction-total-1"></span>
                             </p>
                         </td>
-                        <td style="background-color: #F2CF8C">
+                        <td style="background-color: #AFDBDE">
                             <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
                             <p>Total: 
                                 <span id="reaction-total-2"></span>
                             </p>
                         </td>
-                        <td style="background-color: #E6BD71">
+                        <td style="background-color: #97CACE">
                             <i id="reaction-meh" class="fa fa-reaction fa-frown-o"></i>
                             <p>Total: 
                                 <span id="reaction-total-3"></span>
@@ -135,13 +135,25 @@
                     </tr>
                     <tr>
                         <th>Most Rated</th>
-                        <td><div></div></td>
-                        <td><div></div></td>
+                        <td>
+                            <div class="page-name">index.html</div>
+                        </td>
+                        <td>
+                            <div class="page-emo-count">
+                                <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i>
+                            </div>
+                        </td>
                     </tr>
                     <tr>
                         <th>Most Visited</th>
-                        <td><div></div></td>
-                        <td><div></div></td>
+                        <td>
+                            <div class="page-name">index.html</div>
+                        </td>
+                        <td>
+                            <div class="page-emo-count">
+                                <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i>
+                            </div>
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -160,13 +172,13 @@
     </div>
 
     <!-- Footer -->
-    <footer class="w3-container w3-padding-64 w3-center w3-opacity">
+    <footer class="w3-container w3-padding-32 w3-center w3-opacity" style="bottom:0">
         <div class="w3-xlarge w3-padding-32">
-            <a href="#" class="w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a>
-            <a href="#" class="w3-hover-text-red"><i class="fa fa-pinterest-p"></i></a>
-            <a href="#" class="w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="w3-hover-text-grey"><i class="fa fa-flickr"></i></a>
-            <a href="#" class="w3-hover-text-indigo"><i class="fa fa-linkedin"></i></a>
+            <a href="#" class="social-link w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a>
+            <a href="#" class="social-link w3-hover-text-red"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#" class="social-link w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a>
+            <a href="#" class="social-link w3-hover-text-grey"><i class="fa fa-flickr"></i></a>
+            <a href="#" class="social-link w3-hover-text-indigo"><i class="fa fa-linkedin"></i></a>
         </div>
     </footer>
 
