--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -81,30 +81,35 @@
     <div class="w3-row-padding w3-padding-64 w3-container post" id="grid-1">
         <div class="w3-content">
             <h1 class="headline">Summary</h1>
-            <table class="table" id="emoji-table">
-                <tbody>
-                    <tr>
-                        <td style="background-color: #E6EFF0">
-                            <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
-                            <p>Total: 
-                                <span id="reaction-total-1"></span>
-                            </p>
-                        </td>
-                        <td style="background-color: #AFDBDE">
-                            <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
-                            <p>Total: 
-                                <span id="reaction-total-2"></span>
-                            </p>
-                        </td>
-                        <td style="background-color: #97CACE">
-                            <i id="reaction-meh" class="fa fa-reaction fa-frown-o"></i>
-                            <p>Total: 
-                                <span id="reaction-total-3"></span>
-                            </p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="left-summary">
+                <p></p>
+            </div>
+            <div class="right-summary">
+                <table class="table" id="emoji-table">
+                    <tbody>
+                        <tr>
+                            <td style="background-color: #E6EFF0">
+                                <i id="reaction-happy" class="fa fa-reaction fa-smile-o"></i>
+                                <p>Total: 
+                                    <span id="reaction-total-1"></span>
+                                </p>
+                            </td>
+                            <td style="background-color: #AFDBDE">
+                                <i id="reaction-frown" class="fa fa-reaction fa-meh-o"></i>
+                                <p>Total: 
+                                    <span id="reaction-total-2"></span>
+                                </p>
+                            </td>
+                            <td style="background-color: #97CACE">
+                                <i id="reaction-meh" class="fa fa-reaction fa-frown-o"></i>
+                                <p>Total: 
+                                    <span id="reaction-total-3"></span>
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <br>
             <br>
             <table class="table table-bordered" id="best-worst-page-table">
@@ -115,7 +120,7 @@
                             <div class="page-name" id="best-page"></div>
                         </td>
                         <td>
-                            <div class="page-emo-count"> <i id="best-page-reaction-count" class="fa fa-reaction fa-smile-o"><span> </span></i> </div>
+                            <div class="page-emo-count"> <i id="best-page-reaction-count" class="fa fa-reaction fa-smile-o"><span> </span></i></div>
                         </td>
                     </tr>
                     <tr>
