--- a/feedback-widget.html
+++ b/feedback-widget.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <!--Analytics dependencies -->
+  <script src="ifvisible.js"></script>
+  <!--Dependency of TimeMe.js-->
+  <script src="timeme.js"></script>
+  <!--Tracks time spent on page-->
+  <script src="fingerprint2.js"></script>
+  <script src="OMGCSSAnalytics.js"></script>
 </head>
 <body>
   <div class="feedback-module">
