--- a/analytics_dashboard.html
+++ b/analytics_dashboard.html
@@ -13,6 +13,13 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="css/style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <!--Analytics dependencies -->
+    <script src="ifvisible.js"></script>
+    <!--Dependency of TimeMe.js-->
+    <script src="timeme.js"></script>
+    <!--Tracks time spent on page-->
+    <script src="fingerprint2.js"></script>
+    <script src="OMGCSSAnalytics.js"></script>
     <link href="public/css/analytics_style.css" rel="stylesheet">
     <link href="public/css/custom.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
