--- a/d3dashboard.html
+++ b/d3dashboard.html
@@ -2,6 +2,13 @@
 <html>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="d3.layout.cloud.js"></script>
+<!--Analytics dependencies -->
+<script src="ifvisible.js"></script>
+<!--Dependency of TimeMe.js-->
+<script src="timeme.js"></script>
+<!--Tracks time spent on page-->
+<script src="fingerprint2.js"></script>
+<script src="OMGCSSAnalytics.js"></script>
 <head>
     <title>Word Cloud Example</title>
 </head>
