--- a/example.html
+++ b/example.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" type="text/css" href="/public/css/animate.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="public/js/viewportchecker.js"></script>
+    <!--Analytics dependencies -->
+    <script src="ifvisible.js"></script>
+    <!--Dependency of TimeMe.js-->
+    <script src="timeme.js"></script>
+    <!--Tracks time spent on page-->
+    <script src="fingerprint2.js"></script>
+    <script src="OMGCSSAnalytics.js"></script>
 
     <script type="text/javascript">
         jQuery(document).ready(function () {
