--- a/analytics_dashboard_home.html
+++ b/analytics_dashboard_home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title>Analytics Dashboard</title>
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700' rel='stylesheet' type='text/css'>
@@ -120,7 +121,7 @@
                             <div class="page-name" id="worst-page"></div>
                         </td>
                         <td>
-                            <div class="page-emo-count"> <i id="worst-page-reaction-count" class="fa fa-reaction fa-smile-o"><span> </span></i> </div>
+                            <div class="page-emo-count"> <i id="worst-page-reaction-count" class="fa fa-reaction fa-frown-o"><span> </span></i> </div>
                         </td>
                     </tr>
                     <tr>
@@ -135,10 +136,10 @@
                     <tr>
                         <th>Most Visited</th>
                         <td>
-                            <div class="page-name">index.html</div>
+                            <div class="most-visited-page"></div>
                         </td>
                         <td>
-                            <div class="page-emo-count"> <i id="reaction-happy" class="fa fa-reaction fa-smile-o"><span> 50</span></i> </div>
+                            <div class="page-emo-count"> <i id="most-visited-page-ratings" class="fa fa-reaction fa-smile-o"><span> </span></i> </div>
                         </td>
                     </tr>
                 </tbody>
@@ -150,7 +151,7 @@
         <div class="w3-content"> </div>
     </div>
     <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-        <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1> </div>
+        <h1 class="w3-margin w3-xlarge">Quote of the day: <div id="qotd"></div></h1> </div>
     <!-- Footer -->
     <footer class="w3-container w3-padding-32 w3-center w3-opacity" style="bottom:0">
         <div class="w3-xlarge w3-padding-32"> <a href="#" class="social-link w3-hover-text-indigo"><i class="fa fa-facebook-official"></i></a> <a href="#" class="social-link w3-hover-text-red"><i class="fa fa-pinterest-p"></i></a> <a href="#" class="social-link w3-hover-text-light-blue"><i class="fa fa-twitter"></i></a> <a href="#" class="social-link w3-hover-text-grey"><i class="fa fa-flickr"></i></a> <a href="#" class="social-link w3-hover-text-indigo"><i class="fa fa-linkedin"></i></a> </div>
@@ -176,16 +177,14 @@
         }
     </script>
     <script>
-        /* Quote of the Day (doesnt work - CORS issue)
-                        $.ajax({
-                            url: 'https://quotes.rest/qod.js'
-                            , dataType: 'jsonp'
-                            , success: function (data) {
-                                console.log("Quote: " + data.quote);
-                                console.log("Author: " + data.author);
-                            }
-                        });
-                        */
+        $(document).ready(function () {
+            /* Quotes of the Day */
+            var quotes = ["Just don't do it.", "Never give up (sometimes).", "Keep on keeping on.", "Never save for tomorrow, what you can spend today."];
+            var quotenum = Math.round((quotes.length - 1) * Math.random());
+            console.log("Quote Number: " + quotenum);
+            console.log("Quote: " + quotes[quotenum]);
+            $('#qotd').append(quotes[quotenum]);
+        });
     </script>
     <script src="public/js/analytics_dashboard_home_scripts.js"></script>
 </body>
